# Startup-validator

./: .gitignore  README.md  build.bat  build.sh
backend/: CMakeLists.txt  crow.h  json.hpp  main.cpp
frontend/: index.html
